<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/feed"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <SearchView
            android:id="@+id/searchview"
            android:layout_width="59dp"
            android:layout_height="match_parent"
            android:layout_gravity="end">

        </SearchView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/screenSelector"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="45dp">

        <TextView
            android:id="@+id/stories"
            android:layout_width="364dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="@string/stories"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:layout_width="396dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/campaigns"
            android:textColor="@color/colorGrey"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="476dp"
        android:layout_above="@+id/toolbar"
        android:layout_below="@+id/screenSelector"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="58dp"
                    android:layout_height="67dp"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/avatar"
                    android:src="@mipmap/avatar_1">

                </ImageView>

                <LinearLayout
                    android:layout_width="235dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="16dp"
                        android:text="@string/francisco_watson"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/today_10_32_pm"
                        android:textColor="@color/colorGrey"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/image_story"
                android:src="@mipmap/image_story" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:padding="15dp"
                android:text="@string/lorem"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp">

                <LinearLayout
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@mipmap/thank_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/_31"
                        android:textColor="@color/colorAccent">

                    </TextView>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/share" />

                <TextView
                    android:layout_width="23dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/send_a_gift"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-9dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:text="FEED"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:background="@drawable/textview_border_right"/>
        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:text="SCANNER"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorGrey"
            android:background="@drawable/textview_border_right_unselected"/>
        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:text="GIFTS"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorGrey"
            android:background="@drawable/textview_border_right_unselected"/>/>
        <TextView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:text="PROFILE"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorGrey"
            android:background="@drawable/textview_border_right_unselected"/>/>
    </LinearLayout>
</RelativeLayout>